--- a/module/Application/view/application/owner/index.phtml
+++ b/module/Application/view/application/owner/index.phtml
@@ -6,7 +6,7 @@ $this->headTitle($title);
 ?>
 <h1><?php echo $this->escapeHtml($title); ?></h1>
 <p>
-    <a href="<?php echo $this->url('owner', array('controller'=>'owner','action'=>'add'));?>">Nieuwe eigenaar</a>
+    <a href="<?php echo $this->url('owner', array('controller'=>'owner','action'=>'add'));?>"><i class="icon-plus"></i>Nieuwe eigenaar</a>
 </p>
 
 <table class="table">
