--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -7,18 +7,18 @@
     <div class="span4">
         <h2><?php echo $this->translate('Eigenaren') ?></h2>
         <p><?php echo sprintf($this->translate('Bekijk, wijzig en voeg eigenaren toe. ')) ?></p>
-        <p><a class="btn btn-success" href="./owner" target="_blank"><?php echo $this->translate('Eigenaren') ?> &raquo;</a></p>
+        <p><a class="btn btn-success" href="./owner"><?php echo $this->translate('Eigenaren') ?> &raquo;</a></p>
     </div>
 
     <div class="span4">
         <h2><?php echo $this->translate('Winterstallers') ?></h2>
         <p><?php echo sprintf($this->translate('Bekijk, wijzig en voeg winterstallers toe. ')) ?></p>
-        <p><a class="btn btn-success" href="./winter" target="_blank"><?php echo $this->translate('Winterstallers') ?> &raquo;</a></p>
+        <p><a class="btn btn-success" href="./winter"><?php echo $this->translate('Winterstallers') ?> &raquo;</a></p>
    </div>
 
    <div class="span4">
        <h2><?php echo $this->translate('Statistieken') ?></h2>
         <p><?php echo sprintf($this->translate('Bekijk statistieken. ')) ?></p>
-       <p><a class="btn btn-success" href="./stats" target="_blank"><?php echo $this->translate('Statistieken') ?> &raquo;</a></p>
+       <p><a class="btn btn-success" href="./stats"><?php echo $this->translate('Statistieken') ?> &raquo;</a></p>
    </div>
 </div>
